MET-5754 Introduce date range fields for solr (#677)
* MET-5754 Introduce date range fields for solr

* MET-5754 Cleanup quality issues

* MET-5754 Add tests